<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reg_bg"
    android:orientation="vertical" >

    <include layout="@layout/base_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/c120dp"
        android:orientation="vertical" >

        <com.zxh.flatui.views.FlatEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/c6dp"
            android:digits="@string/usernameinput"
            android:ems="11"
            android:hint="手机号"
            android:includeFontPadding="true"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            flatui:fl_fieldStyle="fl_transparent"
            flatui:fl_theme="@array/UITheme" />

        <com.zxh.flatui.views.FlatEditText
            android:id="@+id/verifycode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/c6dp"
            android:layout_marginBottom="@dimen/c9dp"
            android:layout_marginTop="@dimen/c9dp"
            android:ems="10"
            android:hint="请输入收到的验证码"
            android:includeFontPadding="true"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            android:textSize="@dimen/textsize"
            android:visibility="gone"
            flatui:fl_fieldStyle="fl_transparent"
            flatui:fl_theme="@array/UITheme" />

        <com.zxh.flatui.views.FlatButton
            android:id="@+id/request_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/c6dp"
            android:text="验证"
            android:textSize="@dimen/textsize"
            android:visibility="gone"
            flatui:fl_fieldStyle="fl_transparent"
            flatui:fl_theme="@array/UITheme" />

        <com.zxh.flatui.views.FlatButton
            android:id="@+id/verifycode_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/c6dp"
            android:text="@string/verifyremind"
            flatui:fl_fieldStyle="fl_transparent"
            flatui:fl_theme="@array/UITheme" />

        <com.zxh.flatui.views.FlatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/c6dp"
            android:digits="@string/pwdinput"
            android:ems="10"
            android:hint="请输入6-16位密码"
            android:includeFontPadding="true"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:visibility="invisible"
            flatui:fl_fieldStyle="fl_transparent"
            flatui:fl_theme="@array/UITheme" />

        <com.zxh.flatui.views.FlatEditText
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/c6dp"
            android:digits="@string/pwdinput"
            android:ems="10"
            android:hint="请重新输入密码"
            android:includeFontPadding="true"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:visibility="invisible"
            flatui:fl_fieldStyle="fl_transparent"
            flatui:fl_theme="@array/UITheme" />

        <com.zxh.flatui.views.FlatEditText
            android:id="@+id/registercode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/c6dp"
            android:digits="@string/pwdinput"
            android:ems="10"
            android:hint="请输入注册码"
            android:includeFontPadding="true"
            android:inputType="text"
            android:maxLines="1"
            android:visibility="gone"
            flatui:fl_fieldStyle="fl_transparent"
            flatui:fl_theme="@array/UITheme" />

        <com.zxh.flatui.views.FlatButton
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/c6dp"
            android:text="@string/register"
            android:visibility="gone"
            flatui:fl_fieldStyle="fl_transparent"
            flatui:fl_theme="@array/UITheme" />
    </LinearLayout>

</LinearLayout>