<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/c150dp"
            android:visibility="invisible"
           />

        <com.zxh.flatui.views.FlatEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/c6dp"
            android:digits="@string/usernameinput"
            android:ems="11"
            android:hint="用户名"
            android:includeFontPadding="true"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:textSize="@dimen/textsize"
            flatui:fl_fieldStyle="fl_transparent"
            flatui:fl_theme="@array/UITheme" />

        <com.zxh.flatui.views.FlatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/c6dp"
            android:digits="@string/pwdinput"
            android:ems="10"
            android:hint="密码"
            android:includeFontPadding="true"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:textSize="@dimen/textsize"
            flatui:fl_fieldStyle="fl_transparent"
            flatui:fl_theme="@array/UITheme" />

        <com.zxh.flatui.views.FlatButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/c6dp"
            android:text="@string/login_title"
            android:textSize="@dimen/textsize"
            flatui:fl_fieldStyle="fl_transparent"
            flatui:fl_theme="@array/UITheme" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/c6dp" >

            <com.zxh.flatui.views.FlatTextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="@dimen/c9dp"
                android:layout_marginLeft="@dimen/c12dp"
                android:text="注册"
                android:textSize="@dimen/textsize"
                flatui:fl_textColor="fl_main"
                flatui:fl_theme="@array/UITheme" />

            <com.zxh.flatui.views.FlatTextView
                android:id="@+id/forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="@dimen/c9dp"
                android:layout_marginRight="@dimen/c12dp"
                android:text="忘记密码?"
                android:textSize="@dimen/textsize"
                flatui:fl_textColor="fl_main"
                flatui:fl_theme="@array/UITheme" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>